--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Lizards'
+- GITenberg
 title: A New Subspecies of Lizard, Cnemidophorus sacki, from Michoacán, México
 url: http://www.gutenberg.org/ebooks/33508
